<resources>
    <string name="app_name">NeWork</string>
    <string name="nameJob">Name:</string>
    <string name="position">Position:</string>
    <string name="start">Start:</string>
    <string name="finish">Finish:</string>
    <string name="link">Link:</string>
    <string name="remove">remove</string>
    <string name="edit">edit</string>
    <string name="datetime">Date/time:</string>
    <string name="published">Published:</string>
    <string name="main">Main</string>
    <string name="events">Events</string>
    <string name="my_wall">My wall</string>
    <string name="menu_save">Save</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="confirm">Сonfirm password</string>

</resources>
